# Aegis

./: CMakeLists.txt  README.md  a.out  build_cpp  init.c  main.c  makefile  print.c  print.h  typedefs.h  utils.c
build_cpp.dSYM/Contents/: Info.plist
build_cpp.dSYM/Contents/Resources/DWARF/: build_cpp
build_cpp.dSYM/Contents/Resources/Relocations/aarch64/: build_cpp.yml
cpp-src/: CBoard.cpp  CBoard.h  MoveList.cpp  MoveList.h  bitboard.cpp  bitboard.h  engine.cpp  engine.h  evaluate.cpp  evaluate.h  init.cpp  init.h  magic.cpp  magic.h  main.cpp  move.cpp  move.h  moveGen.cpp  position.cpp  position.h  print.cpp  print.h  test  utils.cpp  utils.h
cpp-src/test.dSYM/Contents/Resources/DWARF/: test
src/: CBoard.cpp  CBoard.h  MoveList.cpp  MoveList.h  bitboard.cpp  engine.cpp  engine.h  evaluate.h  init.c  init.h  magic.h  main.c  main.cpp  move.c  move.cpp  move.h  moveGen.cpp  print.c  print.h  shift-lookup-test.c  typedefs.h  utils.c  utils.cpp  utils.h
src/test.dSYM/Contents/Resources/Relocations/aarch64/: test.yml
tests/: test_CBoard.cpp  test_CheckMate.cpp  test_Methods.cpp  test_MoveGen.cpp
